--- a/public/visual.css
+++ b/public/visual.css
@@ -1,65 +1,220 @@
+/* Configurações gerais da pág */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-
-body {
-    background: rgb(226, 226, 226);
-    font-family: Arial;
-    height: auto;
-    width: auto;
-    min-height: calc(100% - (10vh));
-    overflow-x: hidden;
-
-
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+.body_paghome{
+  background-color: #055BA6;
+  
+}
+.background-color {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  
 }
 
 .logo {
-    position: absolute;
-    left: 3.5%;
-    top: 0.4%;
-
-
-
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 100%;
+  max-height: 100%;
+  
 }
 
-#navbar ul {
-    list-style: none;
-    background: rgb(54, 54, 54);
-    padding: 0;
-    margin: 0;
-    text-align: center;
-    /*border-radius: px;*/
-}
-
-#navbar li {
-    display: inline-block;
-}
-
-#navbar .botao-nav {
+  /* Configurações da NAVBAR */
+  a {
+    color: #fff;
     text-decoration: none;
-    color: white;
-    width: 14vw;
-    display: block;
-    padding: 13% 3%;
+    transition: 0.3s;
+  }
+  
+  a:hover {
+    color: #055BA6;
+  }
+  .link {
+    display: flex;
+    max-width: 7.5vw; /* Defina o tamanho desejado para a tag <a> */
+    height: 11.5vh; /* Defina o tamanho desejado para a tag <a> */
+     /* Oculta qualquer parte da imagem que esteja além do tamanho definido */
+    margin-right: 15%;
+  }
+  
+  .link img {
+    width: auto; /* A imagem ocupará todo o espaço disponível dentro da tag <a> */
+    height: auto; /* A altura será ajustada proporcionalmente para manter a proporção original da imagem */
+  }
+  
+  
+  nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: rgb(54, 54, 54);
+    height: 12vh;
     text-transform: uppercase;
-    font-weight: bold;
-    text-align: center;
-    white-space: nowrap;
+  }
+  
+  .nav-list {
+    list-style: none;
+    display: flex;
+
+  }
+  
+  .nav-list li {
+    letter-spacing: 3px;
+    margin-left: 40px;
+  }
+  
+  .mobile-menu {
+    display: none;
+    cursor: pointer;
+  }
+  
+  .mobile-menu div {
+    width: 32px;
+    height: 2px;
+    background: #fff;
+    margin: 8px;
+    transition: 0.3s;
+  }
+
+  /* Configurações de responsividade da NAVBAR */
+  @media (max-width: 999px) {
+    body, html {
+      overflow-x: hidden;
+    }
+    .carousel-item {
+        height: 500px; /* Defina a altura desejada para o carrossel */
+      }
+    
+    .nav-list {
+      position: absolute;
+      top: 8vh;
+      right: 0;
+      width: 50vw;
+      height: 92vh;
+      background: rgb(54, 54, 54);
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in;
+    }
+    .nav-list li {
+      margin-left: 0;
+      opacity: 0;
+    }
+    .mobile-menu {
+      display: block;
+    }
+  }
+  
+  .nav-list.active {
+    transform: translateX(0);
+  }
+  
+  @keyframes navLinkFade {
+    from {
+      opacity: 0;
+      transform: translateX(50px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
+    }
+  }
+  
+  .mobile-menu.active .line1 {
+    transform: rotate(-45deg) translate(-8px, 8px);
+  }
+  
+  .mobile-menu.active .line2 {
+    opacity: 0;
+  }
+  
+  .mobile-menu.active .line3 {
+    transform: rotate(45deg) translate(-5px, -7px);
+  }
+
+
+
+/* Configurações do footer */
+
+.content {
+  flex-grow: 1;
+  min-height: calc(100% - 10vh); /* Subtrai a altura da navbar e do rodapé */
 }
 
-#navbar-botoes a:hover {
-    background: #3281a0;
+.footer {
+  position: relative;
+  bottom: 0;
+  background-color: rgb(60, 60, 60);
+  padding: 2vh;
+  width: 100%;
+  height: 10vh;
 }
 
-.carousel-item img {
-    width: 100%;
+.footer-conteudo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer-icones {
+  display: flex;
+  align-items: center;
+}
+
+.footer-info {
+  color: white;
+}
+
+.icon {
+  display: inline-block;
+  max-width: 100%;
+  height: 5.5vh;
+  text-align: center;
+  margin-right: 2vw;
+}
+
+
+
+/* Configuração conteúdo principal da (paghome.html) */
+header {
+    position: relative;
+    z-index: 2; /* Define uma camada superior para a navbar */
+  }
+
+.carousel-item {
+    height: 100%; /* Defina a altura desejada para o carrossel */
+  }
+  
+  .carousel-item img {
     height: 100%;
     object-fit: cover;
-}
+  }
+
+  
+  .carouselExample {
+    position: relative;
+    z-index: 1; /* Define uma camada inferior para o carrossel */
+  }
 
 
+
+/* Configuração conteúdo da página de análise(analise.html) */
 #menu_viagem {
     width: 9.5%;
 }
@@ -97,47 +252,20 @@ body {
     cursor: pointer;
 }
 
-.tabela {
-    position: relative;
-    left: 550px;
-    top: -450px;
-    width: 50%;
-}
 
 
 #tabela {
 
-    font-size: 20px;
     position: absolute;
     left: 28%;
-    top: 27.55%;
+    top: 30%;
     background-color: rgb(248, 248, 248);
     text-align: center;
     border: #040404 1px solid;
     margin-left: 20%;
-    width: 40%;
+    width: 42%;
 }
-
-td {
-    padding-left: 40px;
-}
-
-th {
-    font-size: 13px;
-    text-align: center;
-    padding-left: 15px;
-}
-
-.tabela2 {
-    position: relative;
-    left: 550px;
-    top: -900px;
-    width: 50%;
-}
-
-
 #tabela2 {
-    font-size: 12px;
     position: absolute;
     left: 28%;
     top: 70%;
@@ -145,18 +273,23 @@ th {
     text-align: center;
     border: #040404 1px solid;
     margin-left: 20%;
-    width: 40%;
+    width: 42%;
 }
 
 td {
-    padding-left: 40px;
+    font-size: 18px;
+    padding-left: 38px;
 }
 
 th {
-    font-size: 15px;
+    font-size: 17px;
     text-align: center;
     padding-left: 15px;
 }
+
+
+
+
 
 .graficos {
     transform: rotate(-90deg);
@@ -184,65 +317,35 @@ th {
     gap: 1%;
 }
 
-.conteudo-info {
-    justify-content: center;
-    /* Centraliza o conteúdo horizontalmente */
-    align-items: center;
-    /* Centraliza o conteúdo verticalmente */
-    height: 100vh;
-    /* Define a altura da área de visualização */
-    margin: 2%;
+
+/* Configuração do conteúdo da página de informações(info.html) */
+
+.container {
+  display: flex;
+  flex-direction: row;
 }
 
-.paragrafo-info,
-.imagem-info {
-    width: 50%;
-    /* Define a largura desejada para cada div */
-    float: left;
-    /* Faz as divs flutuarem para a esquerda */
-
-
+.image {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
-.paragrafo-info {
-
-    text-align: center;
-    color: black;
+.image img {
+  max-width: 100%;
+  height: auto;
 }
 
-.imagem-info {
-    position: absolute;
-    left: 50%;
-    text-align: center;
-    /* Centraliza o conteúdo dentro do contêiner */
+.text {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 20px;
+  flex-direction: column
 }
 
-.footer {
-    background-color: rgb(60, 60, 60);
-    padding: 2vh;
-}
-
-.footer-conteudo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.footer-icones {
-    display: flex;
-}
-
-.footer-info {
-    color: white;
-}
-
-.icon {
-    display: inline-block;
-    max-width: 100%;
-    height: 5.5vh;
-    text-align: center;
-    margin-right: 2vw;
-}
 
 
 
