--- a/public/mapa.css
+++ b/public/mapa.css
@@ -1,15 +1,40 @@
 html, body {
     height: 100%;
     margin: 0;
-}
-.leaflet-container {
-    height: 100%;
-    width: 100%;
-    /* max-width: 100%;
-    max-height: 100%; */
-}
+    padding: 0;
+    overflow-x: hidden;
+  }
 
-
-#select-viagem{
-    width: 15%;
+.map-container {
+    position: relative;
+    height: 80vh; /* Defina a altura desejada, por exemplo, 80% da altura da janela */
+  }
+  #map {
+    width: 100vw; /* Ocupa 100% da largura do contêiner */
+    height: 100vh; /* Ocupa 100% da altura do contêiner */
+  }
+  
+#map {
+  z-index: 0;
+}
+  
+.map-controls {
+  background-color: rgba(255, 255, 255, 0.336);
+  border-radius: 4%;
+  position: absolute;
+  margin-left: calc(100% - 25vw);
+  z-index: 1;
+  float: right;
+  padding-top: 1vh;
+}
+@media (max-width: 999px) {
+  .map-controls {
+    background-color: rgba(255, 255, 255, 0.336);
+    border-radius: 4%;
+    position: absolute;
+    margin-left: calc(100% - 35vw);
+    z-index: 1;
+    float: right;
+    padding-top: 1vh;
+  }
 }
