--- a/public/visual.css
+++ b/public/visual.css
@@ -11,6 +11,7 @@ html, body {
 }
 .body_paghome{
   background-color: #055BA6;
+  overflow: hidden;
   
 }
 .background-color {
@@ -95,9 +96,6 @@ html, body {
     body, html {
       overflow-x: hidden;
     }
-    .carousel-item {
-        height: 500px; /* Defina a altura desejada para o carrossel */
-      }
     
     .nav-list {
       position: absolute;
@@ -163,7 +161,7 @@ html, body {
   background-color: rgb(60, 60, 60);
   padding: 2vh;
   width: 100%;
-  height: 10vh;
+  height: 24vh;
 }
 
 .footer-conteudo {
@@ -351,3 +349,9 @@ th {
 
 
 /* ÁREA DE TESTE */
+
+
+
+
+
+
