--- a/public/frontend/visual.css
+++ b/public/frontend/visual.css
@@ -149,23 +149,28 @@ nav {
   html {
     overflow-x: hidden;
   }
-  
+
   a:hover {
     color: #055BA6;
   }
+
   .link {
     display: flex;
-    max-width: 7.5vw; /* Defina o tamanho desejado para a tag <a> */
-    height: 11.5vh; /* Defina o tamanho desejado para a tag <a> */
-     /* Oculta qualquer parte da imagem que esteja além do tamanho definido */
+    max-width: 7.5vw;
+    /* Defina o tamanho desejado para a tag <a> */
+    height: 11.5vh;
+    /* Defina o tamanho desejado para a tag <a> */
+    /* Oculta qualquer parte da imagem que esteja além do tamanho definido */
     margin-right: 15%;
   }
-  
+
   .link img {
-    width: auto; /* A imagem ocupará todo o espaço disponível dentro da tag <a> */
-    height: auto; /* A altura será ajustada proporcionalmente para manter a proporção original da imagem */
+    width: auto;
+    /* A imagem ocupará todo o espaço disponível dentro da tag <a> */
+    height: auto;
+    /* A altura será ajustada proporcionalmente para manter a proporção original da imagem */
   }
-  
+
   nav {
     display: flex;
     justify-content: space-around;
@@ -174,7 +179,7 @@ nav {
     height: 12vh;
     text-transform: uppercase;
   }
-  
+
   .nav-list {
     position: absolute;
     top: 8vh;
@@ -349,12 +354,25 @@ header {
   border-radius: 2vh;
   margin-left: 20%;
   width: 55%;
+
 }
 
 #tabela2 {
   position: absolute;
   left: 24%;
   top: 56%;
+  background-color: rgb(248, 248, 248);
+  text-align: center;
+  border: #040404 1px solid;
+  border-radius: 2vh;
+  margin-left: 20%;
+  width: 55%;
+}
+
+#tabela3 {
+  position: absolute;
+  left: 24%;
+  top: 85%;
   background-color: rgb(248, 248, 248);
   text-align: center;
   border: #040404 1px solid;
@@ -388,8 +406,27 @@ th {
   position: absolute;
   top: 14%;
   color: #363434;
-  left: 54.1%;
-  font-size: 27px
+  left: 47.5%;
+  font-size: 4.5vh;
+  font-family: 'Inter', sans-serif;
+}
+
+#Titulo2 {
+  position: absolute;
+  top: 51%;
+  color: #2f3c76;
+  left: 47.5%;
+  font-size: 4vh;
+  font-family: 'Inter', sans-serif;
+}
+
+#Titulo3 {
+  position: absolute;
+  top: 79.6%;
+  color: #2f3c76;
+  left: 47.5%;
+  font-size: 4vh;
+  font-family: 'Inter', sans-serif;
 }
 
 .graficos {
@@ -444,15 +481,10 @@ th {
   align-items: center;
   justify-content: flex-start;
   padding: 20px;
-  flex-direction: column
+  flex-direction: column;
+  text-align: justify;
 }
 
 
 
 /* ÁREA DE TESTE */
-
-
-
-
-
-
