--- a/public/frontend/mapa.css
+++ b/public/frontend/mapa.css
@@ -65,3 +65,11 @@ html, body {
   height: 1vh;
 
 }
+
+#export-btn {
+  position: absolute;
+  top: 90%;
+  right: 20px;
+  padding: 10px;
+  z-index: 1;
+}
