--- a/src/public/frontend/visual.css
+++ b/src/public/frontend/visual.css
@@ -8,6 +8,7 @@
 html,
 body {
   height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
 }
@@ -28,6 +29,7 @@ body {
 
 }
 
+/* Configuração da logo na navbar.*/
 .logo {
   position: absolute;
   top: 50%;
@@ -41,25 +43,25 @@ body {
 /* Configurações barra de rolagem */
 /* Barra de rolagem para navegadores Webkit (Chrome, Safari, Opera) */
 ::-webkit-scrollbar {
-  width: 15px;
-  background-color: rgba(0, 0, 0, 0.651);
+  width: 12px;
+  background-color: rgba(0, 0, 0, 0.116);
   /* Define a cor de fundo transparente */
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.747);
+  background-color: rgba(28, 166, 181, 0.74);
   /* Define a cor da barra de rolagem */
 }
 
 /* Barra de rolagem para navegadores Firefox */
 ::-moz-scrollbar {
-  width: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: 8px;
+  background-color: rgba(0, 0, 0, 0.116);
   /* Define a cor de fundo transparente */
 }
 
 ::-moz-scrollbar-thumb {
-  background-color: #000;
+  background-color: rgba(28, 166, 181, 0.74);
   /* Define a cor da barra de rolagem */
   border-radius: 5px;
   /* Define o raio de borda da barra de rolagem */
@@ -67,13 +69,13 @@ body {
 
 /* Barra de rolagem para navegadores Internet Explorer e Edge */
 ::-ms-scrollbar {
-  width: 10px;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: 8px;
+  background-color: rgba(0, 0, 0, 0.116);
   /* Define a cor de fundo transparente */
 }
 
 ::-ms-scrollbar-thumb {
-  background-color: #000;
+  background-color: rgba(28, 166, 181, 0.74);
   /* Define a cor da barra de rolagem */
   border-radius: 5px;
   /* Define o raio de borda da barra de rolagem */
@@ -180,24 +182,29 @@ ul.nav-list {
   padding: 2vh;
   width: 100%;
 
-
 }
 
+/* Configuração gearis dos conteúdos inseridos no footer*/
 .footer-conteudo {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+/* Configuração da posição dos ícones das redes sociais do IPT.*/
 .footer-icones {
   display: flex;
   align-items: center;
 }
 
+
+/* Configuração do nome do IPT no footer.*/
+
 .footer-info {
   color: white;
 }
 
+/* Configuração dos ícones das redes sociais do IPT.*/
 .icon {
   display: inline-block;
   max-width: 100%;
@@ -212,7 +219,6 @@ ul.nav-list {
 header {
   position: sticky;
   width: 100%;
-  z-index: 1;
   /* Define uma camada superior para a navbar */
 }
 
@@ -253,33 +259,28 @@ header {
   
 .graficos {
   transform: rotate(-90deg);
-
-
-
 }
+
 .tabela-flex{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-left: 1.5%;
-  margin-right: 1.5%;
+  margin-left: 3%;
+  margin-right: 1.5vh;
   
 }
 .form-select{
   width: 20%;
-  margin-left: 1.5vw;
 
 }
 #grafico_selecionado1{
-  width: 50%;
-  margin-left: 10%;
-  margin-bottom: -20vh;
+  width: 65%;
+  margin-left: 3%;
 
 
 }
 #grafico_selecionado2{
-    width: 50%;
-    margin-left: 10%;
+    width: 65%;
+    margin-left: 3%;
 
 }
 
@@ -299,8 +300,6 @@ header {
   border-radius: 2px;
   cursor: pointer;
 }
-
-
 
 td {
   font-size: 18px;
@@ -324,9 +323,7 @@ th {
 }
 
 
-
-/* Configuração do conteúdo da página de informações(info.html) */
-
+/* Configuração do conteúdo da página de Saiba Mais(info.html) */
 
 .container {
   display: flex;
@@ -335,28 +332,21 @@ th {
 
   height: calc(100% - 12vh);
   /* Ajuste a altura do container para excluir a altura da navbar */
-
-
 }
 
+
+/* Título da página do Saiba Mais */
 .text {
   text-align: left;
   margin-top: 2%;
-
 }
 
-
+/* Descrição da página de Saiba Mais */
 .descricao {
   text-align: justify;
   margin-top: 2%;
 }
 
-
-
-
-
-
-/* ÁREA DE TESTE */
 .container-help {
   position: fixed;
   left: 92.5%;
@@ -369,31 +359,42 @@ th {
   cursor: pointer;
 }
 
-
-
 .nav-list.active {
   transform: translateX(0);
 }
-@media (max-width: 720px) {
+@media (max-width: 999px) {
   body,
   html {
+    width: 100%;
     overflow-x: hidden;
   }
   .itens{
-    display: inline-block;
+    display: inline-block;  
+
  }
   .form-select{
       width: 45%;
   }
   .content-graficos{
       margin-left: 3.5vh;
+
   }
   #grafico_selecionado1{
     margin-bottom: -12vh;
+    margin-left: 10%;
+    width: 50%;
+  }
+  #grafico_selecionado2{
+    width: 50%;
+    margin-left: 10%;
   }
   .tabela-flex{
-    margin-right: 22.5%;
+    align-items: center;
+    margin-right: 20%;
     
+  }
+  td{
+    font-size: 14px;
   }
   .link {
     /* Defina o tamanho desejado para a tag <a> */
@@ -409,10 +410,14 @@ th {
 
   nav {
     height: 10vh;
+    z-index: 2;
+    
+
 
   }
 
   .nav-list {
+
     position: absolute;
     top: 8vh;
     right: 0;
@@ -435,7 +440,7 @@ th {
     display: block;
   }
 }
-@keyframes navLinkFade {
+@keyframes navLinkFade { /*Animação da navbar quando a tela é pequena */
   from {
     opacity: 0;
     transform: translateX(50px);
@@ -445,15 +450,4 @@ th {
     opacity: 1;
     transform: translateX(0);
   }
-#logodoipt {
-  width: 40%;
-  margin-left: 30%;
-  margin-top: -18%;
-  box-shadow: 0px 7px 11px rgb(33, 33, 33);
-}
-
-#legendaipt {
-  font-size: 90%;
-  margin-left: 66.5%;
-  margin-top: -13%;
 }
